# TFG-Busqueda-de-archivos-usando-Elasticsearch

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
docs/: Plan De Trabajo – Borrador Entrega .docx
samples/documents/: example.txt  hello.txt  ml.txt
src/cli/: context.py  main.py  rendering.py  utils.py
src/cli/commands/: analyze.py  index.py  init.py  search.py  stats.py  update.py
src/core/: config.py  logging_config.py
src/services/: elasticsearch_service.py  file_indexer.py
src/web/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_file_indexer.py  test_web_api.py
